change model to distilgpt2

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ HUGGINGFACE_API_KEY=
 # Optional: Configure default models
 DEFAULT_LLM=tinyllama
 DEFAULT_EMBEDDING=all-mpnet-base-v2
+DEFAULT_LLM=distilgpt2
