--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,15 @@ python-dotenv==1.0.0
 pydantic==1.10.12  # Compatible with fastapi 0.95.2
 python-multipart==0.0.6
 aiofiles==23.1.0
+gunicorn==21.2.0  # Production WSGI server
 
-# PyTorch (install first with appropriate CUDA version if needed)
+# PyTorch (must be installed first)
 # For Apple Silicon (M1/M2/M3/M4):
 torch>=2.1.0
 torchvision>=0.16.0
 torchaudio>=2.1.0
 
-# For CUDA 11.8:
+# For CUDA 11.8 (uncomment as needed):
 # torch>=2.1.0 --index-url https://download.pytorch.org/whl/cu118
 # torchvision>=0.16.0 --index-url https://download.pytorch.org/whl/cu118
 # torchaudio>=2.1.0 --index-url https://download.pytorch.org/whl/cu118
@@ -30,9 +31,10 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-magic==0.4.27
 
-# Web requests (kept for API calls)
+# Web requests
 requests>=2.31.0
 urllib3==1.26.16
+httpx>=0.25.0  # HTTP/2 client for async requests
 
 # LLM and Embedding Providers
 transformers>=4.36.0
@@ -42,22 +44,29 @@ sentence-transformers>=2.2.2
 safetensors>=0.3.1
 huggingface-hub>=0.16.4
 tokenizers>=0.13.2
+datasets>=2.14.0  # Required for training service
 
 # Quantization and optimization
 optimum>=1.14.0
-auto-gptq>=0.5.0; sys_platform != 'darwin'  # Not available on macOS
+
+# auto-gptq is not compatible with macOS and requires PyTorch to be installed first
+# Only install on non-macOS platforms
+# auto-gptq>=0.5.0; sys_platform != 'darwin'
 
 # Vector Stores and RAG
-langchain==0.0.267  # Updated to a version compatible with pydantic v1
-chromadb==0.4.15  # Updated to a version that works with newer FastAPI
+langchain==0.0.267  # Compatible with pydantic v1
+chromadb==0.4.15  # Compatible with FastAPI 0.95.2
 faiss-cpu==1.7.4  # Use faiss-gpu if you have CUDA
+
+# Performance monitoring
+prometheus-client>=0.17.0  # For metrics collection
+pyinstrument>=4.6.0  # For profiling
 
 # Additional dependencies
 tqdm>=4.65.0
 
-# Development dependencies
-pytest==7.3.1
-black==23.3.0
-isort==5.12.0
-flake8==6.0.0
-mypy==1.3.0
+# Production dependencies
+loguru>=0.7.0  # Better logging
+tenacity>=8.2.3  # For retry logic
+
+# See dev-requirements.txt for development dependencies
