--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,6 @@
-# Build stage
-FROM node:16-slim as build
-
-# Set working directory
+# Dependencies stage - separate stage just for installing dependencies
+FROM node:16-slim as deps
 WORKDIR /app
-
-# Copy package.json and .npmrc
 COPY package.json .npmrc ./
 
 # Install dependencies with optimized flags
@@ -13,29 +9,30 @@ RUN npm install --legacy-peer-deps --force --no-audit --no-fund --loglevel=error
     npm install ajv@8.12.0 ajv-keywords@5.1.0 && \
     npm cache clean --force
 
+# Build stage - separate from dependencies to optimize layer caching
+FROM node:16-slim as build
+WORKDIR /app
+
+# Copy dependencies from deps stage
+COPY --from=deps /app/node_modules ./node_modules
+COPY package.json ./
+
 # Copy only necessary files for building
 COPY public/ ./public/
 COPY src/ ./src/
+COPY nginx.conf ./nginx.conf
 COPY tsconfig.json ./
 
-# Build the app with increased memory limit and production optimization
-RUN NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 npm run build && \
-    rm -rf node_modules
+# Build the app with memory optimization
+# Disable source maps and use conservative memory limits
+RUN npm run build
 
-# Production stage - using Alpine for smaller image size
+# Production stage - using nginx as the web server
 FROM nginx:alpine
 
-# Copy built files from build stage to nginx
+# Copy built files and nginx configuration
 COPY --from=build /app/build /usr/share/nginx/html
-
-# Copy custom nginx config for React routing and API proxying
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-# Remove default nginx website to reduce image size
-RUN rm -rf /usr/share/nginx/html/50x.html
-
-# Cache configuration for better performance
-RUN echo 'fastcgi_cache_path /var/cache/nginx levels=1:2 keys_zone=REACTAPP:10m inactive=60m;' > /etc/nginx/conf.d/cache.conf
+COPY --from=build /app/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port 80
 EXPOSE 80
